# sqltui

./: Cargo.toml  LICENSE  README.md  docker-compose.yml  init.sql
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: adapter.rs  connection.rs  mod.rs  queries.rs
src/db/adapter/: mod.rs
src/db/adapters/: clickhouse.rs  mod.rs  mysql.rs  postgres.rs
src/models/: database.rs  mod.rs  schema.rs  table.rs
src/ui/: app.rs
src/ui/components/: content.rs  input.rs  mod.rs  sidebar.rs  status_bar.rs
